--- a/index.html
+++ b/index.html
@@ -12,44 +12,44 @@
     <form action="">
     <p>1.What was the theme of World Itellectual Property day (May 2019)</p>
     <label for="ans1">Please enter your 1st answer</label>
-    <input type="text" placeholder="your answer">
+    <input type="text" name="ans1" placeholder="your answer">
     <br>
     <p>2.What is the new capital Kazakhstan? ( March  2019)</p>
     <label for="ans2">Please enter your second answer</label>
-    <input type="text" placeholder="your answer">
+    <input type="text" name="ans2" placeholder="your answer">
     <br>
     <p>3.Who won the first gold for India at the  ISSF World cup in Air Rifle category in New Delhi</p>
     <label for="ans3">Please enter your 3rd answer</label>
-    <input type="text" placeholder="your answer">
+    <input type="text" name="ans3" placeholder="your answer">
     <br>
     <p>4.Which organisation gave the guidelines reguarding behavioural patterns, physical activity and 
      sleep for children under age of five (May 2019)</p>
      <label for="ans4">Please enter your 4th answer</label>
-     <input type="text" placeholder="your answer">
+     <input type="text" name="ans4" placeholder="your answer">
      <br>
      <p>5._________ and Vision Coalition teamed up to host bowling events for visually impaired.</p>
      <label for="ans5">Please enter your 5th answer</label>
-     <input type="text" placeholder="your answer">
+     <input type="text" name="ans5" placeholder="your answer">
      <br>
      <p>6.In which year kilograms value was established (December 2018)</p>
      <label for="ans6">Please enter your 6th answer</label>
-     <input type="text" placeholder="your answer">
+     <input type="text" name="ans6" placeholder="your answer">
      <br>
      <p>7.Who was appointed as the Indian Women's cricket team head coach?</p>
      <label for="ans7">Please enter your 7th answer</label>
-     <input type="text" placeholder="your answer">
+     <input type="text"  name="ans7" placeholder="your answer">
      <br>
      <p>8.Which metric is launched to analyse the game of cricket</p>
      <label for="ans8">Please enter your 8th answer</label>
-     <input type="text" placeholder="your answer">
+     <input type="text" name="ans8" placeholder="your answer">
      <br>
      <p>9.Who became 68th Miss World</p>
      <label for="ans9">Please enter your 9th question</label>
-     <input type="text" placeholder="your answer">
+     <input type="text" name="ans9" placeholder="your answer">
      <br>
      <p>10.Who became the second Indian and first  woman to recieve the 'Global Future for Nature Award'</p>
      <label for="ans10">Please enter your last answer</label>
-     <input type="text" placeholder="your answer">
+     <input type="text" name="ans10" placeholder="your answer">
      <br>
      <br>
      <br>
