--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <label for="ans2">Please enter your second answer</label>
     <input type="text" name="ans2" placeholder="your answer">
     <br>
-    <p>3.Who won the first gold for India at the  ISSF World cup in Air Rifle category in New Delhi</p>
+    <p>3.Who won the first gold for India at the  ISSF World cup in Air Rifle category in New Delhi (March 2019)</p>
     <label for="ans3">Please enter your 3rd answer</label>
     <input type="text" name="ans3" placeholder="your answer">
     <br>
@@ -27,7 +27,7 @@
      <label for="ans4">Please enter your 4th answer</label>
      <input type="text" name="ans4" placeholder="your answer">
      <br>
-     <p>5._________ and Vision Coalition teamed up to host bowling events for visually impaired.</p>
+     <p>5._________ and Vision Coalition teamed up to host bowling events for visually impaired.(December 2018)</p>
      <label for="ans5">Please enter your 5th answer</label>
      <input type="text" name="ans5" placeholder="your answer">
      <br>
@@ -35,19 +35,19 @@
      <label for="ans6">Please enter your 6th answer</label>
      <input type="text" name="ans6" placeholder="your answer">
      <br>
-     <p>7.Who was appointed as the Indian Women's cricket team head coach?</p>
+     <p>7.Who was appointed as the Indian Women's cricket team head coach? (january 2019)</p>
      <label for="ans7">Please enter your 7th answer</label>
      <input type="text"  name="ans7" placeholder="your answer">
      <br>
-     <p>8.Which metric is launched to analyse the game of cricket</p>
+     <p>8.Which metric is launched to analyse the game of cricket. (April 2019)</p>
      <label for="ans8">Please enter your 8th answer</label>
      <input type="text" name="ans8" placeholder="your answer">
      <br>
-     <p>9.Who became 68th Miss World</p>
+     <p>9.Who became 68th Miss World.(January 2019)</p>
      <label for="ans9">Please enter your 9th question</label>
      <input type="text" name="ans9" placeholder="your answer">
      <br>
-     <p>10.Who became the second Indian and first  woman to recieve the 'Global Future for Nature Award'</p>
+     <p>10.Who became the second Indian and first  woman to recieve the 'Global Future for Nature Award'.(March 2019)</p>
      <label for="ans10">Please enter your last answer</label>
      <input type="text" name="ans10" placeholder="your answer">
      <br>
