--- a/index.html
+++ b/index.html
@@ -55,5 +55,7 @@
      <br>
      <input type="submit">
     </form>
+    
+    <a href="neon-coder.github.io/Quiz"><input type="submit" name="submit" value=""></a>
 </body>
     </html>
