--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
      <input type="submit">
     </form>
     
-    <a href="neon-coder.github.io/Quiz"><input type="submit" name="submit" value=""></a>
+    <a href="neon-coder.github.io/quiz-answers"><input type="button" name="link" value="check answers"></a>
 </body>
     </html>
