--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
      <input type="submit">
     </form>
     
-    <a href="neon-coder.github.io/quiz-answers"><input type="button" name="link" value="check answers"></a>
+    <h5>Go to my github and download the 'quiz answers'repository to the answers.</h5>
 </body>
     </html>
