host  this website

--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
      <input type="submit">
     </form>
     
-    <h5>Go to my github and download the 'quiz answers'repository to the answers.</h5>
+    <h3><a href="https://neoncoder.github.io/quiz-answers">check the answers if quiz completed</a></h3>
 </body>
     </html>
