--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
      <input type="submit">
     </form>
     
-    <h3><a href="https://neoncoder.github.io/quiz-answers/">check the answers if quiz completed</a></h3>
+    <h3><a href="https://neon-coder.github.io/quiz-answers/">check the answers if quiz completed</a></h3>
 </body>
     </html>
